[package]
name = "newtable"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.25.2"
bevy_egui = "0.28.0"
rand = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }
bevy-trait-query = {git = "https://github.com/RobWalt/bevy-trait-query.git", branch="bevy-0.14-partial-update"}
